# wecom-mail-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/wecom_mail_mcp/: __init__.py  cli.py  config.py  errors.py  models.py  server.py  wecom.py
tests/: test_config.py  test_models.py
